# filecoin-ffi

./: filcrypto.yml  go.mod  go.sum  install-filcrypto  proofs.go  proofs_test.go  run_tests.sh  workflows.go
.circleci/: config.yml
rust/: Cargo.toml
rust/src/proofs/: types.rs
rust/src/util/: api.rs
