[package]
name = "filcrypto"
description = "FFI Interface to Filecoin Proofs"
version = "0.7.5"
authors = ["laser <l@s3r.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/filestar-project/filecoin-ffi"
readme = "README.md"
edition = "2018"
publish = false

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
bls-signatures = "0.6.1"
byteorder = "1.3.4"
drop_struct_macro_derive = "0.4.0"
ff = { version = "0.2.3", package = "fff" }
ffi-toolkit = "0.4.0"
libc = "0.2.80"
log = "0.4.11"
fil_logger = "0.1.2"
rand = "0.7.3"
rand_chacha = "0.2.2"
rayon = "1.5.0"
anyhow = "1.0.33"
bellperson = { version = "0.12", default-features = false, features = ["gpu"] }
serde_json = "1.0.59"
rust-gpu-tools = "0.2.0"
filecoin-proofs-api = { git = "https://github.com/filestar-project/rust-filecoin-proofs-api.git", branch="neptune-3.0.0",tag = "v5.3.2", default-features = false}

[build-dependencies]
cbindgen = "= 0.14.0"

[dev-dependencies]
tempfile = "3.1.0"

[features]
default = ["pairing"]
pairing = ["filecoin-proofs-api/pairing", "bellperson/pairing"]
blst = ["filecoin-proofs-api/blst", "bellperson/blst"]